white space fix

--- a/css/style.css
+++ b/css/style.css
@@ -10628,7 +10628,7 @@ ol.custom-ordered-list li .title {
   padding: 0.375rem 0.5rem;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
-  margin-top: 50px;
+  margin-top: 34px;
 }
 
 .multiselect select {
@@ -10667,7 +10667,7 @@ ol.custom-ordered-list li .title {
 
 .ambassade__results {
   display: none;
-  margin-top: 24px;
+  margin-top: 34px;
 }
 
 .ambassade__results .bahamas {
